trabajo-relacionado: Review from Taihú 07/Apr/2017
Signed-off-by: Ariel D'Alessandro <ariel@vanguardiasur.com.ar>

--- a/all.bib
+++ b/all.bib
@@ -929,3 +929,41 @@
 	doi={10.1109/CVPR.1994.323794},
 	ISSN={1063-6919}
 }
+
+@ARTICLE{cadena2016pastpresentfutureslam,
+	author={C. Cadena and L. Carlone and H. Carrillo and Y. Latif and D. Scaramuzza and J. Neira and I. Reid and J. J. Leonard},
+	journal={IEEE Transactions on Robotics},
+	title={{Past, Present, and Future of Simultaneous Localization and Mapping: Toward the Robust-Perception Age}},
+	year={2016},
+	volume={32},
+	number={6},
+	pages={1309--1332},
+	doi={10.1109/TRO.2016.2624754},
+	ISSN={1552-3098},
+	month={Dec},
+}
+
+@incollection{Rosten:Drummond:ECCV06,
+	year={2006},
+	isbn={978-3-540-33832-1},
+	booktitle={Proceedings of the European Conference on Computer Vision (ECCV)},
+	volume={3951},
+	series={Lecture Notes in Computer Science},
+	doi={10.1007/11744023_34},
+	title={{Machine Learning for High-Speed Corner Detection}},
+	url={http://dx.doi.org/10.1007/11744023_34},
+	publisher={Springer Berlin Heidelberg},
+	author={Rosten, Edward and Drummond, Tom},
+	pages={430--443},
+	language={English}
+}
+
+@InProceedings{engel2016dso,
+	author={Engel, Jakob and Koltun, Vladlen and Cremers, Daniel},
+	title={{Direct Sparse Odometry}},
+	booktitle={arXiv:1607.02565},
+	arXiv={arXiv:1607.02565},
+	year={2016},
+	month={July},
+	keywords={mono-ds,dso}
+}
